--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 <section class="top-section">
 <div class="">
-<img src="c:\Users\HP\Downloads\profile.png" alt="avatar-image" id="avatar">
+<img src="https://github.com/maithri154/portfolio.github.io/blob/main/profile.png?raw=true" alt="avatar-image" id="avatar">
 </div>
 <div class="title">
 <h1 id="name">I'm Maithri</h1>
