--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <section class="skill-section">
 <h1 id="skill-header">My Programming Skills</h1>
 <div class="skills-row">
-<img src="c:\Users\HP\Downloads\python1.jpg" alt="python-icon" id="python-icon">
+<img src="https://github.com/maithri154/portfolio.github.io/blob/main/python1.jpg?raw=true" alt="python-icon" id="python-icon">
 <h2>python programming</h2>
 <p class="skill-para">I have used python for several years now, familiar with pandas,numpy,sklearn,matplotlib,etc</p>
 </div>
