--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </div>
 
 <div class="skills-row">
-<img src="c:\Users\HP\Downloads\css.png" alt="css-icon" id="css-icon">
+<img src="https://github.com/maithri154/portfolio.github.io/blob/main/css.png?raw=true" alt="css-icon" id="css-icon">
 <h2>CSS</h2>
 <p class="skill-para">I have 2 years of experience in web development. Created many e-commerce and LMS website.</p>
 </div>
