--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </div>
 
 <div class="skills-row">
-<img src="c:\Users\HP\Downloads\c.png" alt="c-icon" id="c-icon">
+<img src="https://github.com/maithri154/portfolio.github.io/blob/main/c.png?raw=true" alt="c-icon" id="c-icon">
 <h2>c programming</h2>
 <p class="skill-para">I have designed many apps using c programming also done some projects.</p>
 </div>
