--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </div>
 
 <div class="skills-row">
-<img src="c:\Users\HP\Downloads\html.png" alt="html-icon" id="html-icon">
+<img src="https://github.com/maithri154/portfolio.github.io/blob/main/html.png?raw=true" alt="html-icon" id="html-icon">
 <h2>HTML</h2>
 <p class="skill-para">I have 2 years of experience in web development. Created many e-commerce and LMS website. And still learning about this.</p>
 </div>
